--- a/.flowconfig
+++ b/.flowconfig
@@ -13,6 +13,8 @@
 ; "node_modules/react-native" but in the source repo it is in the root
 .*/Libraries/react-native/React.js
 .*/Libraries/react-native/ReactNative.js
+; .*/react-native/
+.*/react-native-fbads/
 
 ; Additional create-react-native-app ignores
 
