--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "flow-bin": "^0.38.0",
     "jest-expo": "^0.3.0",
     "react-native-scripts": "0.0.22",
     "react-test-renderer": "~15.4.1"
@@ -13,6 +14,7 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "test": "node node_modules/jest/bin/jest.js --watch"
   },
   "jest": {
@@ -20,6 +22,7 @@
   },
   "dependencies": {
     "expo": "^15.0.0",
+    "immutable": "^3.8.1",
     "react": "~15.4.0",
     "react-native": "0.42.3",
     "react-router-native": "^4.0.0",
