--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "~15.4.0",
     "react-native": "0.42.3",
     "react-native-navbar": "^1.6.3",
-    "rest-client-sdk": "^0.12.0"
+    "rest-client-sdk": "^0.12.0",
+    "styled-components": "^1.4.4"
   }
 }
