--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.42.3",
     "react-native-navbar": "~1.6.3 || ^1.7.1",
     "react-native-side-menu": "^0.20.1",
+    "react-router-native": "^4.0.0",
     "rest-client-sdk": "^0.12.0",
     "styled-components": "^1.4.4"
   },
