--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "react-native": "0.42.3",
     "react-native-navbar": "~1.6.3 || ^1.7.1",
     "react-native-side-menu": "^0.20.1",
+    "react-redux": "^5.0.3",
     "react-router-native": "^4.0.0",
+    "react-router-redux": "next",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "rest-client-sdk": "^0.12.0",
     "styled-components": "^1.4.4"
   },
@@ -29,6 +33,7 @@
     "flow-bin": "^0.38.0",
     "jest-expo": "^0.3.1",
     "react-native-scripts": "0.0.26",
-    "react-test-renderer": "~15.4.1"
+    "react-test-renderer": "~15.4.1",
+    "remote-redux-devtools": "^0.5.7"
   }
 }
