--- a/.flowconfig
+++ b/.flowconfig
@@ -24,6 +24,8 @@
 ; Ignore misbehaving dev-dependencies
 .*/node_modules/xdl/build/*
 .*/node_modules/reqwest/tests/*
+.*/node_modules/styled-components/dangerfile.js
+.*/node_modules/styled-components/src/test/utils.js
 
 ; Ignore missing expo-sdk dependencies (temporarily)
 ; https://github.com/exponent/exponent-sdk/issues/36
