--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "expo": "^15.0.0",
     "immutable": "^3.8.1",
+    "prettier": "^0.22.0",
     "react": "~15.4.0",
     "react-native": "0.42.3",
     "react-native-navbar": "~1.6.3 || ^1.7.1",
