--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "prettier --single-quote --trailing-comma es5 --parser flow --write",
+      "prettier --single-quote --trailing-comma es5 --write",
       "git add"
     ]
   },
