--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-native-side-menu": "^0.20.1",
     "react-redux": "^5.0.4",
     "react-router-native": "^4.0.0",
-    "react-router-redux": "next",
+    "react-router-redux": "^5.0.0-alpha.5",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "rest-client-sdk": "^0.12.0",
