--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.42.3",
     "react-native-navbar": "~1.6.3 || ^1.7.1",
     "react-native-side-menu": "^0.20.1",
+    "react-navigation": "^1.0.0-beta.7",
     "react-redux": "^5.0.4",
     "react-router-native": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
