--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "prettier --single-quote --trailing-comma es5 --write",
+      "prettier-eslint --prettier.single-quote --prettier.trailing-comma es5 --write",
       "git add"
     ]
   },
@@ -35,10 +35,20 @@
     "styled-components": "^1.4.5"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-config-prettier": "^1.7.0",
+    "eslint-plugin-flowtype": "^2.32.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2 || ^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
     "flow-bin": "^0.38.0",
     "husky": "^0.13.3",
     "jest-expo": "^0.3.1",
     "lint-staged": "^3.4.0",
+    "prettier-eslint": "^6.1.2",
+    "prettier-eslint-cli": "^3.4.2",
     "react-native-scripts": "0.0.29",
     "react-test-renderer": "~15.4.1",
     "remote-redux-devtools": "^0.5.7"
