--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^15.0.0",
+    "expo": "^16.0.0",
     "immutable": "^3.8.1",
     "prettier": "^1.1.0",
-    "react": "~15.4.0",
-    "react-native": "0.42.3",
+    "react": "16.0.0-alpha.6",
+    "react-native": "^0.43.0",
     "react-navigation": "^1.0.0-beta.9",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
@@ -36,21 +36,22 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "eslint": "^3.15.0",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-config-prettier": "^2.0.0",
     "eslint-plugin-flowtype": "^2.32.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2 || ^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
-    "flow-bin": "^0.38.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.0",
+    "flow-bin": "^0.40.0",
+    "flow-typed": "^2.1.2",
     "husky": "^0.13.3",
-    "jest-expo": "^0.3.1",
+    "jest-expo": "^0.4.0",
     "lint-staged": "^3.4.1",
     "prettier-eslint": "^6.1.2",
     "prettier-eslint-cli": "^3.4.2",
     "react-native-scripts": "0.0.29",
     "react-test-renderer": "~15.4.1",
-    "remote-redux-devtools": "^0.5.7"
+    "remote-redux-devtools": "^0.5.10"
   }
 }
